<resources>
    <string name="app_name">Pharma</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_login">SE CONNECTER</string>
    <string name="editText_Username">Nom d\'utilisateur</string>
    <string name="editText_Password">Mot de passe (JJ-MMM-YY)</string>
    <string name="nav_compte_rendu">Compte rendu</string>
    <string name="nav_visiteur">Visiteur</string>
    <string name="nav_praticien">Praticien</string>
    <string name="nav_medicament">Médicament</string>
    <string name="nav_profil">Mon profil</string>
    <string name="nav_header_title">Pharma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visiteurnom">Nom</string>
    <string name="visiteurprenom">Prénom</string>
    <string name="button_profil">Mettre à jour</string>
    <string name="visiteuradresse">Adresse</string>
    <string name="visiteurcp">Code Postal</string>
    <string name="visiteurville">Ville</string>
    <string name="maintitle">PHARMA</string>
    <string name="btnnewrapport">Nouveau rapport</string>
    <string name="medicamentdepotlegal">Dépôt Légal</string>
    <string name="medicamentnom">Nom Comercial</string>
    <string name="medicamentcomposition">Composition</string>
    <string name="medicamenteffet">Effet</string>
    <string name="medicamentcontreindication">Contre Indication</string>
    <string name="praticiennom">Nom</string>
    <string name="praticienprenom">Prénom</string>
    <string name="praticienadresse">Adresse</string>
    <string name="praticiencp">Code Postal</string>
    <string name="praticienville">Ville</string>
    <string name="praticiencoef">Coef</string>
    <string name="rapportvisitedate">Date (JJ-MM-YYYY)</string>
    <string name="rapportvisitemotif">Motif</string>
    <string name="rapportvisitebilan">Bilan</string>
    <string name="rapportvisitepraticien">Praticien</string>
    <string name="button_rapport_visite">VALIDER</string>
    <string name="rapportvistenum">Numéro de rapport</string>
    <string name="rapportvistedate">Date</string>
    <string name="rapportvistemotif">Motif</string>
    <string name="rapportvistebilan">Bilan</string>
    <string name="rapportvistepraticien">Praticien</string>
    <string name="rapportvistemedicament">Médicament offert</string>
    <string name="rapportvistequantite">Quantité</string>
    <string name="home_screen">PHARMA EUROPE</string>
    <string name="nav_map">Carte</string>

    <!-- Spinner Rapport Visite Motif -->
    <string-array name="rapport_visite_motif">
        <item>Prospection</item>
        <item>Visite</item>
        <item>Relance</item>
        <item>Autre</item>
    </string-array>

    <!-- Spinner Rapport Visite Medicament Quantité -->
    <string-array name="rapport_visite_quantite">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
