<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compte_rendu"
            android:icon="@drawable/ic_menu_compte_rendu"
            android:title="@string/nav_compte_rendu" />
        <item
            android:id="@+id/nav_visiteur"
            android:icon="@drawable/ic_menu_visiteur"
            android:title="@string/nav_visiteur" />
        <item
            android:id="@+id/nav_praticien"
            android:icon="@drawable/ic_menu_praticien"
            android:title="@string/nav_praticien" />
        <item
            android:id="@+id/nav_medicament"
            android:icon="@drawable/ic_menu_medicament"
            android:title="@string/nav_medicament" />
    </group>

    <item android:title="Mon Compte">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_menu_profil"
                android:title="@string/nav_profil" />
        </menu>
    </item>

</menu>
