<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VisiteurProfilFragment">

    <!--Visiteur Nom-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVisiteurNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etVisiteurNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visiteurnom"
            android:inputType="textCapWords|textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <!--Visiteur Prénom-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVisiteurPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutVisiteurNom"
        app:layout_constraintHorizontal_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etVisiteurPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visiteurprenom"
            android:inputType="textCapWords|textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <!--Visiteur Adresse-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVisiteurAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutVisiteurPrenom"
        app:layout_constraintHorizontal_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etVisiteurAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visiteuradresse"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <!--Visiteur CP-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVisiteurCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutVisiteurAdresse"
        app:layout_constraintHorizontal_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etVisiteurCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visiteurcp"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <!--Visiteur Ville-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVisiteurVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutVisiteurCP"
        app:layout_constraintHorizontal_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etVisiteurVille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/visiteurville"
            android:inputType="textCapWords|text"/>
    </android.support.design.widget.TextInputLayout>

    <!--Boutton valider-->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_profil"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutVisiteurVille" />

</android.support.constraint.ConstraintLayout>
