<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RapportVisiteDetailsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--RapportViste Num-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistenum" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Date-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVisteNum">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistedate" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Motif-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteMotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVisteDate">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteMotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistemotif" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Bilan-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteBilan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVisteMotif">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteBilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistebilan" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Praticien-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVistePraticien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVisteBilan">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVistePraticien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistepraticien" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Médicament-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteMedicament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVistePraticien">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistemedicament" />
        </android.support.design.widget.TextInputLayout>

        <!--RapportViste Quantité-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRapportVisteQuantite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRapportVisteMedicament">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRapportVisteQuantite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rapportvistequantite" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>
