<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MedicamentDetailsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Médicament Dépôt Légal-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMedicamentDepotLegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMedicamentDepotLegal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicamentdepotlegal" />
        </android.support.design.widget.TextInputLayout>

        <!--Médicament Nom-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMedicamentNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutMedicamentDepotLegal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMedicamentNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicamentnom" />
        </android.support.design.widget.TextInputLayout>

        <!--Médicament Composition-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMedicamentComposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutMedicamentNom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMedicamentComposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicamentcomposition"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <!--Médicament Effets-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMedicamentEffet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutMedicamentComposition">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMedicamentEffet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicamenteffet"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <!--Médicament Contre Indication-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMedicamentContreIndication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutMedicamentEffet">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMedicamentContreIndication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicamentcontreindication"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>
